<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome Completo:</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="ingressar_lista_emails">Ingressar na lista de e-mails?</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">salvar</string>
    <string name="hint_telefone" tools:ignore="TypographyDashes">16–93456-7890</string>
    <string name="sexo">Sexo</string>
    <string-array name="uf_examples">
        <item>São Paulo</item>
        <item>Minas Gerais</item>
        <item>Acre</item>
        <item>Parana</item>
    </string-array>

</resources>